[project]
name = "sphinxcontrib-repl"
description = "Auto-executing Python REPL directive"
readme = "README.rst"
requires-python = ">=3.7"
# keywords = ["one", "two"]
authors = [{name = "Takeshi Ikuma", email="tikuma@lsuhsc.edu"}]
license = { text = "BSD 3-Clause License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities"
]
dependencies = ["docutils"]
dynamic = ["version"]

[project.optional-dependencies]
mpl = ["matplotlib"]


[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "sphinx_ext_repl.__version__"}
