[project]
name = "sphinxcontrib-repl"
description = "Sphinx Extension - Directives to auto-evaluate Python code-blocks"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["sphinx", "autoeval", "doctest-block"]
authors = [{name = "Takeshi Ikuma", email="tikuma@lsuhsc.edu"}]
license = { text = "GPL-2.0 License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities"
]
dependencies = ["docutils"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/sphinx-contrib/repl"
Discussions = "https://github.com/sphinx-contrib/repl/discussions"
Issues = "https://github.com/sphinx-contrib/repl/issues"
PullRequests = "https://github.com/sphinx-contrib/repl/pulls"

[project.optional-dependencies]
mpl = ["matplotlib"]

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "sphinxcontrib.repl.__version__"}
